versioned_docs/version-4.0.4/系统扩展指南/扩展例子.md

import useBaseUrl from '@docusaurus/useBaseUrl';

## 终端脚本

### 打开作业组直接跳到指定作业

#### 需求描述

作业组中根据指定的作业名跳转到该作业

#### 脚本代码

* 适用于配置逻辑中的脚本，不支持打开脚本、关闭脚本及显示后脚本

```js

var curAllTasks = ScriptEngine.Context.GetCurTasks();
if (curAllTasks && curAllTasks.length > 0) {
	var needJumpTask = _.find(curAllTasks, function(_task){
		return _task.Name == '跳转的作业名';
	});
	if(needJumpTask){
		page.executeTaskTree.JumpTask(needJumpTask);		
	}
}
return true;

```

* 适用于待执行，执行中的作业组脚本

```js

var curAllTasks = ScriptEngine.Context.GetCurTasks();
if (curAllTasks && curAllTasks.length > 0) {
	var needJumpTask = _.find(curAllTasks,function(_task){
		return _task.Name == '跳转的作业名';
	});
	if (needJumpTask) {
		var taskGroup = ScriptEngine.Context.curTaskGroup;
		if (taskGroup.Status != JobStatus.New) {
			GlobalInfo.SetTaskGroupTaskParentID(taskGroup.ID, taskGroup.SequenceID, needJumpTask.ParentTaskID);
			GlobalInfo.SetTaskGroupTaskID(taskGroup.ID, taskGroup.SequenceID, needJumpTask.ID);
		}
	}
}
return true;

```

### 根据物料名和物料属性获取指定物料属性值

#### 需求描述

根据物料的名称和物料属性的名称获取该物料的属性值，返回为数组

#### 脚本代码

* 适用于作业项属性中的可选项脚本

```js

var resultName = ScriptEngine.GetResultName();
var materielID = 'fa4bbc96-0f8c-4f15-976a-b1022c0b5920';
var materielPropertyName = '出库原则';
var materielName = '软垫－消声器';
ScriptEngine.GetAjaxToApiServer('Report', 'GetCustomReportColumn', 'id=' + materielID, null, 'get', function (_result) {
  if(_result && _result.ColumnList && _result.ColumnList.length > 0){
    var find = _result.ColumnList.find(function(_col){return _col.Title == materielPropertyName});
    if(find){
      var field = find.Field;
      var isCustomData = false;
      if(field && field.indexOf('CustomData_') > -1){
        field = field.substring(11);
        isCustomData = true;
      }
      ScriptEngine.GetAjaxToApiServer('Materiel', 'GetByName', 'name='+materielName, null, 'get',function(_response){
        var list = [];
        if(_response){
          if(isCustomData && _response['CustomData'] && typeof _response['CustomData'][field] != 'undefined'){ 
            var value = _response['CustomData'][field];
            list.push(value);
          }else if(typeof _response[field] != 'undefined') {
            var value = _response[field];
            list.push(value);
          }
        }
        ScriptEngine[resultName] = list;
      });
    }else{
      ScriptEngine[resultName] = [];
    }
  }else{
    ScriptEngine[resultName] = [];
  }
});
return { 'ResultName':resultName};

```

### 根据作业状态检查的值，自动填写作业项的值

#### 需求描述

作业项上是配置了状态检查的作业，根据状态检查的值，自动填写作业项的值

#### 脚本代码

* 适用于作业项逻辑中的执行脚本

```js

var task = ScriptEngine.Context.curParentTask;
if(task){
  if(task.Tags && task.Tags.length > 0){
    if(task.Tags[0].Value =='c95ce17b-313c-4097-8c2f-6169ae98cb7d'){    //自定义列表中特护运行的ID
      ScriptEngine.Context.SetTaskAttributeValue(contextID,'Value','1')
    } else{
      ScriptEngine.Context.SetTaskAttributeValue(contextID,'Value','3')
    }  
  }
}
return true;

```

### 智能电子锁开锁配置

#### 需求描述

作业项为智能电子锁的开锁，使用此脚本实现开锁

#### 脚本代码

* 适用于作业项逻辑中的执行脚本

```js

var resultName = ScriptEngine.GetResultName();
ScriptEngine.Context.UnSmartLock('', function(_result){
    ScriptEngine[resultName] = _result;
});
return { 'ResultName':resultName};

```

### 更新作业关联资产的指定资产属性值

#### 需求描述

更新作业所关联的资产中数据类型为日期时间的指定资产属性的值

#### 脚本代码

* 适用于作业项逻辑中的执行脚本

```js

var resultName = ScriptEngine.GetResultName();
var assetID = ScriptEngine.Context.GetTaskAssetID(ScriptEngine.Context.GetCurTask())
Common.AjaxToApiServer('Asset', 'GetAssetProperty', 'assetID='+assetID+'&propertyName=上次作业开始时间', '', 'get', function (_isOk, _msg, _result) {
 if(_result){
  var now = new Date();
  var value = now.toString('yyyy-MM-dd HH:mm:ss');
  Common.AjaxToApiServer('Asset', 'UpdateAssetPropertyValue', 'propertyID='+_result.ID+'&propertyValue=' + value, '', 'put', function (_isOk, _msg, _result) {
   ScriptEngine[resultName] = _isOk;
  });
 }
 else{
  ScriptEngine[resultName] = false;
 }
});
return { 'ResultName':resultName};

```

### 打开作业组直接跳转到作业组属性页面

#### 需求描述

打开作业组时直接跳转到作业组属性页面的显示后脚本

#### 脚本代码

* 适用于作业组配置中的显示后脚本

```js

if(window.showScriptIndex === 1){
	return true;
}
window.showScriptIndex = 1;
var setIconHtml = function(){
  return function(){
    if(executeTaskTree)
		executeTaskTree.SetIconHtml();
  }
}
var completeTask = function(){
  return function (_isSave, _value, _isNotupdateDisplay, _isNotNext) {
		var task = ScriptEngine.Context.GetCurTask();
    if(executeTaskTree)
		executeTaskTree.CompleteTaskAndNext(task, _isSave, _value, !_isNotupdateDisplay, false, _isNotNext);
	}
}
var curTaskChanged = function(_callback){
  return function () {
		executeTaskInfo.CurTaskChanged(_callback);
	}
}
var jsonParseSafe = function (str) {
  var res = null;
  try {
    if ((str.indexOf('{') >= 0 && str.indexOf('}') > 0) || str.indexOf('[') >= 0 && str.indexOf(']') > 0) {
      res = JSON.parse(str);
    }
  }
  catch (e) {
    res = null;
  }
  return res;
}

var tasks = ScriptEngine.Context.GetCurTasks();
if(GlobalInfo.GetTaskGroupPageModel() == "auto"){
  tasks = 
}
var selectedTask = _.find(tasks, function (_task) { return _task.Name == '入库1' });
var executeTaskInfo = new ExecuteTaskInfo(ScriptEngine.Context, completeTask(), setIconHtml());
executeTaskInfo.inputValueBox = new InputValueBox('valueName',0);
executeTaskInfo.inputValueBox.executeTaskCommon = ScriptEngine.Context;
var executeTaskTree = new ExecuteTaskTree(ScriptEngine.Context, 'divTaskTree', curTaskChanged( function () { }), null,null,null);
executeTaskTree.JumpTask(selectedTask,selectedTask.ID);
if(selectedTask){
var tag = selectedTask['Tags'][0];
  var data = {
    Json: tag && tag.DefaultValue ? jsonParseSafe(tag.DefaultValue) : '',
    jsonFormat: tag && tag.Format ? jsonParseSafe(tag.Format) : '',
    task: selectedTask,
    title: selectedTask.Name,
    inputID: 'customInputValue0'
  }
  var curView = plus.webview.currentWebview();
  mui.openWindow({
	  url: 'JsonEditorView.html',
	  id: Common.NewGuid(),
	  extras: {
	    parentViewID: curView.id,
	    data: data
	  },
	  createNew: false
	});
}
return true;

```

### 根据资产名获取的资产号值赋值给作业项默认值的脚本

#### 需求描述

根据资产名获取的资产号值，把值赋给作业项默认值

#### 脚本代码

* 适用于作业项逻辑中的执行脚本

```
var resultName = ScriptEngine.GetResultName();
ScriptEngine.GetAjaxToApiServer('Asset', 'GetAssets', '', null, 'get',function(_result){
 var find = _.find(_result,function(_item){return _item.Name == '新资产1'});
 if(find){
  ScriptEngine[resultName] = find.ID;
  ScriptEngine.Context.SetTaskAttributeValue(contextID,'Value',find.ID)
 }
});

return { 'ResultName':resultName};

```

### 判断当前登陆人可执行作业组数量大于5时返回ture

#### 需求描述

计算终端当前登录人员可执行的作业组数量并判断，大于5时返回ture，未接受不算在内

#### 脚本代码

* 适用于作业组的打开脚本

```
var resultName = ScriptEngine.GetResultName();
var result = false;
ScriptEngine.GetLoginUser(function (_result) {
  console.log(_result);
  if (_result && _result.UserID) {
    ScriptEngine.GetAjaxToApiServer('UserConfig', 'GetRoles', 'userID=' + _result.UserID, '', 'get', function (_result) {
      console.log(_result);
      var roleIDList = [];
      if (_result && _result.length > 0) {
        _.each(_result, function (_oneRole) {
          roleIDList.push(_oneRole.ID);
        })
      }
      try {
        var daAccess = new DAAccess();
        var daTaskGroup = daAccess.GetDA(SyncEntity.TaskGroup);
        daTaskGroup.GetByUserGroupID(roleIDList, function (_isSuccess, _taskGroups) {          
          if (_isSuccess) {
            var filters = _.filter(_taskGroups, function (_taskGroup) {
              if (_taskGroup.RelatedSequenceList && _taskGroup.RelatedSequenceList.length > 0) {
                //已接受且不是已执行状态
                return _.find(_taskGroup.RelatedSequenceList, function (_item) { return ((_item['IsRobTask'] && _item['RobTaskPersonID'] != Common.GuidEmpty) || !_item['IsRobTask']) && _item['SequenceStatus'] != 3 });
              } else {
                return false
              }
            })
            result = filters && filters.length > 5 ? true : false;
          } else {
            alert('获取作业组失败');
          }
          alert('结果 = ' + result);
          alert('可执行的作业组个数 = ' + filters.length);
          ScriptEngine[resultName] = result;
        })
      } catch (e) {
        alert(e.message);
        ScriptEngine[resultName] = result;
      }
    });

  } else {
    alert('结果 = ' + _isSuccess);

    ScriptEngine[resultName] = result;
  }
});
return { 'ResultName': resultName };

```

### 根据设备的运行时长，自动计算出润滑寿命

#### 需求描述

设备运行时长最高为300小时，超过需进行润滑保养，根据300-运行时长属性值，自动计算出润滑寿命作业项的值

#### 脚本代码

* 适用于作业项的默认值表达式

```
var resultName = ScriptEngine.GetResultName();
var assetID = ScriptEngine.Context.GetTaskAssetID(ScriptEngine.Context.GetCurTask())
if(!assetID){
  assetID= '12aab825-b7e5-4610-91af-d782ba0239e0' //资产ID
}
ScriptEngine.GetAjaxToApiServer('Asset', 'GetLatestTimeseries', 'assetID='+assetID+'&attrNames=运行时长', '', 'get', function (_result) {
 var value = 300;
 alert('运行时长' + _result['运行时长']['Value'])
 if (_result && _result['运行时长'] && _result['运行时长']['Value']) {
  value = 300 - (_result['运行时长']['Value'])
 }
 ScriptEngine.Context.SetTaskAttributeValue(contextID,'Value',value.toString());
 ScriptEngine[resultName] = value.toString();
});
return { 'ResultName':resultName};

```

### 动火作业中，判断具有MAC地址的定位终端是否在围栏内

#### 需求描述

在动火作业中，结合定位系统，判断有MAC地址的定位终端是否在绘制的动火区域围栏内

#### 脚本代码

* 适用于作业条件脚本、作业项逻辑执行脚本、作业组打开脚本

```
var joySuchAjaxToApiServer = function (_action, _urlParameters, _data, _method, _callback) {
  try {
    var _urlParameters = (_urlParameters) ? _urlParameters : '';
    var _method = (_method) ? _method : 'get';
    var _data = (_data) ? _data : null;

    var url = 'http://192.168.125.194:46000';
    if (_action) {
      url += '/' + _action
    }
    if (_urlParameters)
      url += '?' + _urlParameters;
    var ajaxOptions = {
      type: _method,
      contentType: 'application/json; charset=utf-8',
      data: _data,
      url: url,
      timeout: 100000, //超时时间：10秒
      dataType: 'json',
      success: function (_result, _textStatus, _jqXHR) {
        if (_result.errorCode == 0) {
          _result.IsOk = true;
          _result.Response = _result.data;
        } else {
          _result.IsOk = false;
        }

        _callback(_result.IsOk, _result.errorMsg, _result.Response);
      },
      error: function (_jqXHR, _textStatus, _errorThrown) {
        if (_callback)
          _callback(false, '请求失败');
      }
    }
    if (_action != 'getAccessTokenV2') {
      ajaxOptions.headers = {
        Authorization: joySuchToken//这里是Token
      }
    }
    $.ajax(ajaxOptions);
  } catch (e) {
    if (_callback)
      _callback(false, e.message);
  }
}

var setJoySuchToken = function (_callback) {
  var data = {
    'licence': 'd63a6557aa5fe703cefc5cc50f846895'//'5bb6bfae7eeb4cdd8d9099fc05a9d379'  // 固定
  }
  joySuchAjaxToApiServer('getAccessTokenV2', '', JSON.stringify(data), 'post', function (_isOk, _errMsg, _result) {
    if (_isOk) {
      joySuchToken = _result.token;
      refreshToken = _result.refreshToken
      tokenEffectiveTs = _result.startTime + _result.expiresIn * 1000
    }
    _callback()
  })
}

// 获取资产外部标签
var getAssetTag = function (_assetName, _callback) {
  var mac = ''
  Common.AjaxToApiServer('Asset', 'GetAllExtTags', '', null, 'GET', function (_isOk, _msg, _response) {
    if (_isOk) {
      var find = _.find(_response, function (_item) { return _item.AssetName == _assetName && _item.APName == 'MAC地址' });
      if (find) {
        mac = find.ExtTag;
      }
    } else {
      alert('获取资产外部标签失败，失败的原因为：' + _msg);
    }
    _callback(mac)
  })
}


var resultName = ScriptEngine.GetResultName();
var joySuchToken = '';
var refreshToken = '';
var tokenEffectiveTs = '';
var railID = ScriptEngine.Context.GetTaskGroupPropertyValue('围栏ID')// 围栏ID

getAssetTag('定位胸牌1', function (_mac) {
  if (_mac) {
    setJoySuchToken(function () {
      var condition = {
        'buildId': '203498',   // 固定            
        'railId': railID
      }
      joySuchAjaxToApiServer('WebLocate/locateByRail', 'accessToken=' + joySuchToken, JSON.stringify(condition), 'post', function (_isOk, _errMsg, _result) {
        if (_isOk && _result && _result['recordList']) {
          var find = _.find(_result['recordList'], function (_item) { return _item.userId == _mac });
          if (!find) {
          for(var i = 0;i<1000;i++){
            alert('不在动火作业范围内');
          }
          }
        } else {
         for(var i = 0;i<1000;i++){
            alert('不在动火作业范围内');
          }
        }
        ScriptEngine[resultName] = _mac;
      })
    })
  } else {
    alert('未获取到当前MAC地址');
    ScriptEngine[resultName] = _mac;
  }

})
return { 'ResultName': resultName };

```

## Web端脚本

### 得到资产的所有子孙，返回资产名的列表

#### 需求描述

根据指定的资产名得到其所有子孙，返回资产名的列表

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var resultName = ScriptEngine.GetResultName();
var assetNames = [];
ScriptEngine.GetAssets('aaaaa', true, false, function (_result) {   //'aaaaa'为资产名
    if (_result && _result.length > 0) {
        for (var i = 0; i < _result.length; i++) {
            assetNames.push({ 'ID': _result[i].ID, 'Name': _result[i].Name });
        }
    }
    ScriptEngine[resultName] = assetNames;
});

return { 'ResultName': resultName };
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben1.png')} />

### 得到固定组织单元的直接儿子，此外加一个固定的字符串，返回列表

#### 需求描述

得到固定组织单元下所有的直接儿子，并在后面加一个固定的字符串，返回成列表

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var field = '*';  //固定字符串参数
var resultName = ScriptEngine.GetResultName();
var orgUnitNames = [];
var orgUnitName = '监理队';//参数 组织单元名
ScriptEngine.GetOrgUnits(orgUnitName, true, true, function (_result) {
    if (_result && _result.length > 1) {//得到结果第一个是组织单元本身，只需儿子，则从第一个元素开始
        for (var i = 1; i < _result.length; i++) {
            orgUnitNames.push({ 'ID': _result[i].ID, 'Name': _result[i].Name + field});
        }
    }
    ScriptEngine[resultName] = orgUnitNames;
});

return { 'ResultName': resultName };
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben2.png')} />

### 组织单元属于登录人组织单元，岗位为固定名称，所有人列表

#### 需求描述

组织单元属于当前登录用户组织单元，岗位为固定名称，返回满足条件的所有人的列表

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var postName = '监理员';
var resultName = ScriptEngine.GetResultName();
var users = [];
ScriptEngine.GetLoginUser(function (_curLoginUser) {
    if (_curLoginUser) {
        var curUserID = _curLoginUser.UserID?_curLoginUser.UserID:_curLoginUser.ID;
        var sql = 'select id,bi_name as Name from [User] where ai_deleted=\'0\'  and id in(\
                    select userid from userrolegroup where orgunitID in(\
                        SELECT DISTINCT ID FROM H_OrgUnitRelation WHERE ParentID in(select orgunitid from userrolegroup where userid=\'' + curUserID + '\')\
                    or orgunitid IN(select orgunitid from userrolegroup where userid=\''+ curUserID + '\'))\
                    and roleid in(select id from role where bi_name=\'' + postName + '\' and ai_deleted=\'0\')) order by bi_name';    
        ScriptEngine.GetAjaxToApiServer('Sql', 'GetDataSetBySQL', 'sql=' + sql, null, 'POST', function (_result) {
        if (_result && _result.Rows && _result.Rows.length > 0) {
                for (var i = 0; i < _result.Rows.length; i++) {
                    users.push({ ID: _result.Rows[i].Cells[0], Name: _result.Rows[i].Cells[1] });
                }
                ScriptEngine[resultName] = users;

            } else {
                ScriptEngine[resultName] = users;
            }
        });

    } else {
        ScriptEngine[resultName] = users;
    }
});
return { 'ResultName': resultName };
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben3.png')} />

### 组织单元属于作业组组织单元，岗位为固定名称， 所有人列表

#### 需求描述

组织单元属于作业组的组织单元，岗位为固定名称，返回满足条件的所有人的列表

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本（计划和创建活动不适用）

```js
var postName = '监理员';
var taskGroupProperyName = '库存';	// 后续代码会根据这个属性获取当前作业组
var users = [];
var taskgroupProperty = ScriptEngine.Context.GetTaskGroupProperty(taskGroupProperyName);
if (taskgroupProperty) {
    var resultName = ScriptEngine.GetResultName();
    var sql = 'select DISTINCT id,bi_name as Name from [User] where ai_deleted=\'0\' \
    and id in(\
        select userid from userrolegroup where orgunitID in(\
            SELECT DISTINCT ID FROM H_OrgUnitRelation WHERE ParentID in(select OrgUnitID from taskGroupEntity where id IN(select TaskGroupID from TaskGroupProperty where ID=\''+ taskgroupProperty.ID + '\'))\
        ) or orgunitid IN(select OrgUnitID from taskGroupEntity where id IN(select TaskGroupID from TaskGroupProperty where ID=\''+ taskgroupProperty.ID + '\'))	\
        and roleid in(select id from role where bi_name=\''+ postName + '\' and ai_deleted=\'0\')\
    ) order by bi_name';
    ScriptEngine.GetAjaxToApiServer('Sql', 'GetDataSetBySQL', 'sql=' + sql, null, 'POST', function (_result) {
        if (_result && _result.Rows && _result.Rows.length > 0) {
            for (var i = 0; i < _result.Rows.length; i++) {
                users.push({ ID: _result.Rows[i].Cells[0], Name: _result.Rows[i].Cells[1] });
            }
            ScriptEngine[resultName] = users;

        } else {
            ScriptEngine[resultName] = users;
        }
    });
    return { 'ResultName': resultName };
} else {
    console.error('属性不存在：' + taskGroupProperyName);
    return users;
}
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben4.png')} />

### 根据名称找到对应资产，将此资产的某一属性更新到另一作业组属性里

#### 需求描述

根据名称找到对应资产，资产名唯一，将此资产的某一属性的值更新到另一作业组属性里

#### 脚本代码 

* 适用于作业组属性更多设置中的修改值事件后脚本

```js
var assetName = '阀门11';
var assetPropertyName = '状态字符串';
var taskGroupPropertyName = '阀门11的状态字符串';
var urlParameters = 'parentID=invalid&name=' + assetName;
ScriptEngine.GetAjaxToApiServer('Asset','GetByName',urlParameters,null,'get',function(_result){
	var asset = _result;
	if(asset){
		urlParameters = 'assetID='+asset.ID+'&propertyName=' + assetPropertyName;
		ScriptEngine.GetAjaxToApiServer('Asset','GetAssetProperty',urlParameters,null,'get',function(_result){
			var assetProperty = _result;
			if(assetProperty){
				ScriptEngine.Context.SetTaskGroupPropertyValue(taskGroupPropertyName,assetProperty.CurrentValue);			
			}
			else{
				console.error('资产属性不存在：' + assetName +'.' + assetPropertyName);
			}
		});
	}else{
		console.error('资产不存在:' + assetName);
	}
});
return true;
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben5.png')} />

### 根据人员名称查找人员某一属性（更多属性）更新到另一个作业组属性

#### 需求描述

根据人员的名称查找该人员更多属性中的某一属性，将此属性值更新到另一作业组属性里

#### 脚本代码

* 适用于作业组属性更多设置中的修改值事件后脚本

```js
var userName = 'a11甲班监理员';
var userPropertyName = '资质';
var taskGroupPropertyName = '人员属性的值';
var urlParameters = 'parentID=invalid&name=' + userName;
ScriptEngine.GetAjaxToApiServer('UserConfig','GetByName',urlParameters,null,'get',function(_result){
	var user = _result;	
	if(user){
		var customProperties = user.CustomProperty;
		if(customProperties){
			customProperties = JSON.parse(customProperties);
			var property = _.find(customProperties,function(_item){return _item.Name==userPropertyName;});
			if(property){
				ScriptEngine.Context.SetTaskGroupPropertyValue(taskGroupPropertyName,property.Value);
			}
			else{
				console.error('人员扩展属性不存在:' + userName + '.' + userPropertyName);
			}
		}
		else{
			console.error('人员没有扩展属性:' + userName);
		}
	}else{
		console.error('人员不存在:' + userName);
	}
});
return true;
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben6.png')} />

### 按照列表名得到列表项

#### 需求描述

按照列表的名称，得到该列表的项

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var resultName = ScriptEngine.GetResultName();
var responseItems = [];
var responseName = '地区';//参数 自定义列表名
console.log(responseName);
var urlParameters = 'parentID=&name=' + responseName;
ScriptEngine.GetAjaxToApiServer('UserDefinedList','GetByName',urlParameters,null,'get',function(_result){				
	if(_result){
		urlParameters = 'parentID=' + _result.ID;
		ScriptEngine.GetAjaxToApiServer('UserDefinedList','GetChild',urlParameters,null,'get',function(_result){				
			if(_result){
				ScriptEngine[resultName]=_result;
			}
			else{
				console.error('没有找到“'+responseName+'”的列表项');
				ScriptEngine[resultName]=[];
			}
		});		
	}
	else{
		console.error('没有找到“'+responseName+'”的列表类型');
		ScriptEngine[resultName]=[];
	}
});
return { 'ResultName':resultName};
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben7.png')} />

### 按照id得到列表项的名称

#### 需求描述

按照列表项的id得到列表项的名称

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var resultName = ScriptEngine.GetResultName();
var responseItemID = '698DB607-ED42-4FC1-978A-144D410FC46C';
var list = [];
ScriptEngine.GetAjaxToApiServer('UserDefinedList','GetByID','id='+responseItemID, '','get',function(_result){
 if(_result){
  list.push({ 'ID': _result.ID, 'Name': _result.Name });
 }
 ScriptEngine[resultName] = list;
});

return { 'ResultName':resultName};
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben8.png')} />

### 退料明细 - 实际退料 = 退料差额

#### 需求描述

退料明细 - 实际退料 = 退料差额，都为json格式的库存操作属性，以退料明细为准，相同物料的数量相减，有则减去实际退料，结果自动更新至退料差额，退料差额初始值为空

#### 脚本代码

* 适用于作业组属性更多设置中的修改值事件后脚本

```js
var materialReturn = ScriptEngine.Context.GetTaskGroupPropertyValue('退料明细');
var realReturn = ScriptEngine.Context.GetTaskGroupPropertyValue('实际退料');
if (materialReturn) {
    var materialReturnObj = JSON.parse(materialReturn);
    if(realReturn){
	    var realReturnObj = JSON.parse(realReturn);
	    if (materialReturnObj && materialReturnObj['操作项'] && realReturnObj && realReturnObj['操作项']) {
	        var materialReturnOperationItemList = materialReturnObj['操作项'];
	        var realReturnOperationItemList = realReturnObj['操作项'];
	        if (materialReturnOperationItemList && materialReturnOperationItemList.length > 0 && realReturnOperationItemList && realReturnOperationItemList.length > 0) {
	            for (var i = 0; i < materialReturnOperationItemList.length; i++) {
	                var materielName = materialReturnOperationItemList[i]['物料'];
	                if (materielName) {
	                	var find = _.find(realReturnOperationItemList,function(_item){return _item['物料'] == materielName;});
	                	if(find && find['数量']){
	                		materialReturnOperationItemList[i]['数量'] = parseFloat(materialReturnOperationItemList[i]['数量']) - parseFloat(find['数量']) + '';
	                	}
	                }
	            }
	            
	        }
	    }
    }
    var modifyValue = JSON.stringify(materialReturnObj);
    ScriptEngine.Context.SetTaskGroupPropertyValue('退料差额', modifyValue);
}
return true;
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben9.png')} />

### 作业组属性为json，操作项下有标准价格并且大于200时，更新另一个作业组属性为'是'

#### 需求描述

当前作业组属性为json，其中操作项下有标准价格，当标准价格大于200时，更新另一个作业组属性为列表项的'是'

#### 脚本代码

* 适用于作业组属性更多设置中的修改值事件后脚本

```js
var curTaskGroupPropertyName = '库存';
var modifyTaskGroupPropertyName = '是否列表';
var property = ScriptEngine.Context.GetTaskGroupProperty(curTaskGroupPropertyName);
if(property){
	if(property.Value){
		var obj = JSON.parse(property.Value);
		if(obj && obj['操作项'] && obj['操作项'].length>0){
			var find = _.find(obj['操作项'],function(_item){ return _item['标准价格'] && parseFloat(_item['标准价格'])> 200 });
			if(find){
				var urlParameters = 'parentID=invalid&name=是';
				// 获取名字为“是”的列表项（注意：列表项名字为“是”的不能有多个，否则有可能来自于不同的列表）
				ScriptEngine.GetAjaxToApiServer('UserDefinedList','GetByName',urlParameters,null,'get',function(_result){				
					if(_result){
						ScriptEngine.Context.SetTaskGroupPropertyValue(modifyTaskGroupPropertyName,_result.ID);
					}
					else{
						console.error('没有找到“是”的列表项');
					}
				});			
			}
		}
	}
	else{
		console.error('作业组属性值为空：' + curTaskGroupPropertyName)
	}
}
else{
	console.error('作业组属性不存在：' + curTaskGroupPropertyName);
}
return true;
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben10.png')} />

### 筛选出组织单元属于a，岗位维修+ 组织单元属于b，岗位为班长的人的集合

#### 需求描述

筛选出组织单元属于a，岗位维修+ 组织单元属于b，岗位为班长的人的集合(此条件可以是一个或多个，组合是固定的)，角色能满足其中一项的用户，都返回为列表显示出来

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var resultName = ScriptEngine.GetResultName();
var orgUnitNames = ['201车间', '202车间']; //组织单元名
var postIDs = ['48f637c4-c4d2-422a-ae51-16364ab8838b', '65eb1faa-b1ae-4e63-8636-0b92eb35051b'];  //班长、技师
var users = [];
if (orgUnitNames && orgUnitNames.length > 0 && postIDs && postIDs.length > 0 && orgUnitNames.length == postIDs.length) {
    var sql = 'select distinct [User].ID, [User].BI_Name UserName  from UserRoleGroup left join[User] on UserRoleGroup.UserID = [User].ID and[User].AI_Deleted = \'0\'\ left join OrgUnit ChildOrgUnit on ChildOrgUnit.ID = UserRoleGroup.OrgUnitID and ChildOrgUnit.AI_Deleted = \'0\'\ left join H_OrgUnitRelation on H_OrgUnitRelation.ID = UserRoleGroup.OrgUnitID left join OrgUnit ParentOrgUnit on ParentOrgUnit.ID = H_OrgUnitRelation.ParentID and ParentOrgUnit.AI_Deleted = \'0\' where ';
    for (var i = 0; i < orgUnitNames.length; i++) {
        sql += '((ParentOrgUnit.BI_Name=\'' + orgUnitNames[i] + '\' or  ChildOrgUnit.BI_Name=\'' + orgUnitNames[i] + '\') and UserRoleGroup.RoleID =\''  + postIDs[i] + '\')';
        if (i != orgUnitNames.length - 1) {
            sql += ' or ';
        }
    }
    ScriptEngine.GetAjaxToApiServer('Sql', 'GetDataSetBySQL', 'sql=' + sql, null, 'POST', function (_result) {
        if (_result && _result.Rows && _result.Rows.length > 0) {
            for (var i = 0; i < _result.Rows.length; i++) {
                users.push({ ID: _result.Rows[i].Cells[0], Name: _result.Rows[i].Cells[1] });
            }
            ScriptEngine[resultName] = users;
        } else {
            ScriptEngine[resultName] = users;
        }
    });
} else {
    ScriptEngine[resultName] = users;
}
return { 'ResultName': resultName };
```

* 效果如图

  <img alt=" " src={useBaseUrl('docimg/jiaoben11.png')} />


### EOC选择属于某组织单元和某岗位的人，显示是否在岗（不在岗最后排列），显示在手工单数（顺序排列）

#### 需求描述

EOC修改作业组属性时，可选择属于某组织单元和某岗位的人，同时将所有符合条件的人是否在岗（不在岗最后排列），在手工单数（顺序排列）显示出来

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```

var list = [];  //定义数组列表
var orgUnitID = 'e31c2b8d-13c5-479a-9b88-48c35f7b2f96';  //定义组织单元  
var postID = 'ce59a28d-f441-4953-9491-62ed2d576ee6'; //定义岗位
var resultName = ScriptEngine.GetResultName();
ScriptEngine.GetAjaxToApiServer('UserConfig', 'GetByOrgUnitID', 'orgUnitID=' + orgUnitID + '&withRoles=' + true, '', 'GET', function (_usersBelongOrgUnit) {    //调得到所有用户接口
  console.log(_usersBelongOrgUnit); //打印出来
  list.push({ ID: 'title', Name: '姓名', '在手工单数': '在手工单数', '在岗': '是否在岗' });  //数组标题
  ScriptEngine.GetAjaxToApiServer('UserConfig', 'GetByPostID', 'postID=' + postID, '', 'GET', function (_usersBelongPost) {    //调得到所有用户接口
    console.log(_usersBelongPost); //打印出来
    var userList = [];
    if (_usersBelongPost && _usersBelongPost.length > 0 && _usersBelongOrgUnit && _usersBelongOrgUnit.length > 0) {
      //从所有用户角色里筛选出组织单元和岗位符合的用户
      var users = _.filter(_usersBelongOrgUnit, function (_user) {
        return _.find(_usersBelongPost, function (__user) { return __user.ID == _user.ID });
      })
      if (users && users.length > 0) {
        _.each(users, function (_user) {
          userList.push({ ID: _user.ID, Name: _user.Name })
        })
      }
    }
    var sql = 'select SeqUser.UserID,COUNT(*) as Count FROM SeqUser LEFT JOIN TaskGroupSequence ON TaskGroupSequence.ID = SeqUser.SeqID LEFT JOIN ActivityEntity ON ActivityEntity.ID = TaskGroupSequence.ActivityEntityID where  (ActivityState =1 or ActivityState =2)  and ActivityEntity.ActivityID = \'94070C66-DAFC-4DEA-821E-586DDC7F4072\' and TaskGroupSequence.TaskGroupEntityID in(select ID from TaskGroupEntity where IsExtracted=\'0\') group by SeqUser.UserID'

    ScriptEngine.GetAjaxToApiServer('Sql', 'GetDataSetBySQL', 'sql=' + sql, '', 'get', function (_result) {
      console.log(_result);
      var toExecuteUserAndCount = [];
      if (_result && _result.Rows && _result.Rows.length > 0) {
        toExecuteUserAndCount = _result.Rows;
      }
      _.each(userList,function(_user){
        var find = _.find(toExecuteUserAndCount,function(_item){return _item['Cells'] && _item['Cells'][0] == _user['ID']});
        _user['在手工单数'] = find?find['Cells'][1]:0;
      })
      userList = _.sortBy(userList, '在手工单数');
      ScriptEngine.GetAjaxToApiServer('Scheduling', 'GetScheduleUserByCondition', '', '', 'POST', function (_result) {    //调得到所有用户接口
        console.log(_result); //打印出来
        _.each(userList, function (_item) {
          var isRight = _.find(_result, function (__item) {
            var endTs = new Date(__item.EndTime).getTime();
            var startTs = new Date(__item.StartTime).getTime();
            var ts = new Date().getTime()
            return (__item.UserID == _item.ID && ts >= startTs && ts <= endTs)
          })
          _item['在岗'] = isRight ? '是' : '否';
          _item['Color'] = isRight ? 'black' : '#ccc';
          console.log(isRight);
        })
        userList = _.sortBy(userList, '在岗').reverse();
        list = list.concat(userList);
        ScriptEngine[resultName] = list;

      });
    })
  })
});
return { 'ResultName': resultName };

```

* 效果如图

  <img alt=" " src={useBaseUrl('docimg/jiaoben12.png')} />


### EOC作业组属性中选择某组织单元后，自动将属于组织单元的用户填入另一个作业组属性

#### 需求描述

EOC修改作业组属性时，选择了组织单元的值之后，自动获取属于该组织单元的用户，将结果赋值到另一个作业组属性中

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本及修改值后事件脚本

```

可选项脚本中，用于获取组织单元列表

var field = '';  //固定字符串参数
var resultName = ScriptEngine.GetResultName();
var orgUnitNames = [];
var orgUnitName = '某电厂';//参数 父级组织单元名
ScriptEngine.GetOrgUnits(orgUnitName, true, false, function (_result) {
    if (_result && _result.length > 1) {
        for (var i = 1; i < _result.length; i++) {
            orgUnitNames.push({ 'ID': _result[i].ID, 'Name': _result[i].Name + field});
        }
    }
    ScriptEngine[resultName] = orgUnitNames;
});

return { 'ResultName': resultName };

```

```
修改值后事件脚本中，用于选择组织单元后获取用户及赋值

var value = ScriptEngine.Context.GetTaskGroupPropertyValue('检修班组'); //作业组属性名
ScriptEngine.GetOrgUnits('', true, false,function(_result){
	var find = _.find(_result,function(_item){return _item['Name'] == value});
    var userNameList = [];
    if (find) {
        SysCommon.AjaxToApiServer('UserConfig', 'GetByOrgUnitID', 'orgUnitID=' + find.ID + '&withRoles=' + false, '', 'get', function (__isOk, __msg, __result) {
            if (__isOk && __result) {
                if (__isOk && __result && __result.length > 0) {
                    _.each(__result, function (_user) {
                        userNameList.push(_user.Name);
                    })
                }
            }
            ScriptEngine.Context.SetTaskGroupPropertyValue('班组成员', userNameList.join(','));  // 自动赋值的作业组属性名
        })
    }else{
        ScriptEngine.Context.SetTaskGroupPropertyValue('班组成员', userNameList.join(','));
    }
})
return true;

```

* 效果如图

  <img alt=" " src={useBaseUrl('docimg/jiaoben13.png')} />

### 数据类型为json字符串的作业组属性修改后，自动将值填入另一个Json字符串作业组属性中

#### 需求描述

作业组属性1和作业组属性2都为Json字符串，其中有相同的Json属性，当修改了作业组属性1的Json属性值后，自动将修改后的值写进作业组属性2里相同的Json属性中

#### 脚本代码

* 适用于作业组属性更多设置中的修改值后事件脚本

```
var str = ScriptEngine.Context.GetTaskGroupPropertyValue('内容');
console.log(str);
var assetNameList = [];
if (str) {
  ScriptEngine.GetAjaxToApiServer('UserDefinedList', 'GetUserDefinedListTree', '', null, 'GET', function (_response) {
    var type = _.find(_response,function(_item){return _item['Name'] == '类别'});
    var action = _.find(_response,function(_item){return _item['Name'] == '动作'});
    var newValueList = [];
    var valueList = JSON.parse(str);
    _.each(valueList, function (_item) {
      var assetName = _item['对象'];
      if (assetName.indexOf('.') > -1) {
        var index = assetName.lastIndexOf('.');
        if (index > -1) {
          assetName = assetName.substr(index + 1);
        }
      }
      assetNameList.push(assetName);
      var curType = _item['类别'];
      var curAction = _item['动作'];
      if(type && type['ChildList']){
        var find = _.find(type['ChildList'],function(__item){return __item['ID'] == curType});
        if(find){
          curType = find['Name'];
        }
      }
      if(action && action['ChildList']){
        var find = _.find(action['ChildList'],function(__item){return __item['ID'] == curAction});
        if(find){
          curAction = find['Name'];
        }
      }
      newValueList.push({'类别':curType,'动作':curAction,'对象':_item['对象']})
    })
    // console.log(newValueList);
    ScriptEngine.GetAjaxToApiServer('Asset', 'GetAssets', '', null, 'GET', function (_result) {
      var assetTypeIDList = [];
      _.each(assetNameList, function (_assetName) {
        var find = _.find(_result, function (_asset) { return _asset['Name'] == _assetName });
        if (find && find['RelatedAssetType'] && find['RelatedAssetType']['ID'] && SysCommon.IsNotEmptyGuid(find['RelatedAssetType']['ID'])) {
          assetTypeIDList.push(find['RelatedAssetType']['ID']);
        } else {
          assetTypeIDList.push(SysCommon.GuidEmpty);
        }
      })
     

        // ScriptEngine.Context.SetTaskGroupPropertyValue('操作内容1',JSON.stringify(valueList));
        var taskGroupProperty = ScriptEngine.Context.GetTaskGroupProperty('操作内容');
        if (taskGroupProperty) {
          $('.JsonData', $('#' + taskGroupProperty.ObjID)).attr('dataString', JSON.stringify(newValueList));
          window.ShowJsonTableView($('#' + taskGroupProperty.ObjID).find('.JsonData'), JSON.stringify(newValueList));
        }
      
    });
  })
}

return true;

```

* 效果如图

  <img alt=" " src={useBaseUrl('docimg/jiaoben14.png')} />

### 数据类型为可输入列表作业组属性编辑时选择输入后，自动将输入的内容作为列表项新建到列表中

#### 需求描述

当数据类型为可输入列表时，因为列表项中没有想要的选项而选择了输入，如果输入内容是原列表项中没有的，则将输入的内容新建到列表项中，下次操作时自动成为列表选择项之一

#### 脚本代码

* 适用于作业组属性更多设置中的修改值后事件脚本

```
var value = ScriptEngine.Context.GetTaskGroupPropertyValue('动作'); //作业组属性名
if (value && !SysCommon.IsNotEmptyGuid(value)) {
    var parentID = '9eccc102-2cee-42fe-92f6-ce34dd874215' //自定义列表的ID
    var condition = { 
        Type: 7, 
        ParentID: parentID, 
        Name: value 
    }; 
    ScriptEngine.GetAjaxToApiServer('UserDefinedList', 'Create', '', JSON.stringify(condition), 'post', function (_result) { 
        console.log(_result);
    })
}
return true;

```

* 效果如图

  <img alt=" " src={useBaseUrl('docimg/jiaoben15.png')} />